# cfdp-rs

./: CHANGELOG.md  Cargo.toml  README.md  coverage.py  justfile
.github/workflows/: ci.yml
automation/: Jenkinsfile
examples/python-interop/: README.md  main.py  main.rs  requirements.txt
src/: buf_len.rs  dest.rs  filestore.rs  lib.rs  lost_segments.rs  request.rs  source.rs  time.rs  user.rs
tests/: end-to-end.rs
