[package]
name = "cfdp-rs"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Robin Mueller <muellerr@irs.uni-stuttgart.de>"]
description = "High level CCSDS File Delivery Protocol components"
homepage = "https://egit.irs.uni-stuttgart.de/rust/cfdp"
repository = "https://egit.irs.uni-stuttgart.de/rust/cfdp"
license = "Apache-2.0"
keywords = ["no-std", "space", "packets", "ccsds", "ecss"]
categories = ["aerospace", "aerospace::space-protocols", "no-std", "filesystem"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cfdp"

[dependencies]
crc = "3"
smallvec = "1"
derive-new = ">=0.6, <=0.7"
hashbrown = { version = ">=0.14, <=0.15", optional = true }
spacepackets = { git = "https://egit.irs.uni-stuttgart.de/rust/spacepackets.git", version = "0.16", default-features = false }
thiserror = { version = "2", default-features = false }
serde = { version = "1", optional = true }
defmt  = { version = "1", optional = true }

[features]
default = ["std"]
std = [
    "alloc",
    "thiserror/std",
    "spacepackets/std"
]
alloc = [
    "hashbrown",
    "spacepackets/alloc"
]
serde = ["dep:serde", "spacepackets/serde", "hashbrown/serde"]
defmt = ["dep:defmt", "spacepackets/defmt"]

[dev-dependencies]
tempfile = "3"
rand = "0.9"
log = "0.4"
fern = "0.7"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
