[package]
name = "cfdp-rs"
version = "0.3.0"
edition = "2024"
rust-version = "1.86.0"
authors = ["Robin Mueller <muellerr@irs.uni-stuttgart.de>"]
description = "High level CCSDS File Delivery Protocol components"
homepage = "https://egit.irs.uni-stuttgart.de/rust/cfdp"
repository = "https://egit.irs.uni-stuttgart.de/rust/cfdp"
license = "Apache-2.0"
keywords = ["no-std", "space", "packets", "ccsds", "ecss"]
categories = ["aerospace", "aerospace::space-protocols", "no-std", "filesystem"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cfdp"

[dependencies]
crc = "3"
smallvec = "1"
derive-new = ">=0.6, <=0.7"
hashbrown = { version = ">=0.14, <=0.15", optional = true }
spacepackets = { version = "0.16", default-features = false }
thiserror = { version = "2", default-features = false }
heapless = "0.9"
serde = { version = "1", optional = true }
defmt  = { version = "1", optional = true }

[features]
default = ["std", "packet-buf-2k"]
std = [
    "alloc",
    "thiserror/std",
    "spacepackets/std"
]
alloc = [
    "hashbrown",
    "spacepackets/alloc"
]
serde = ["dep:serde", "spacepackets/serde", "hashbrown/serde", "heapless/serde"]
defmt = ["dep:defmt", "spacepackets/defmt"]

# Available packet buffer sizes. Only one should be enabled.
# 256 bytes
packet-buf-256 = []
# 512 bytes
packet-buf-512 = []
# 1024 bytes
packet-buf-1k = []
# 2048 bytes
packet-buf-2k = []
# 4096 bytes
packet-buf-4k = []

[dev-dependencies]
tempfile = "3"
rand = "0.9"
log = "0.4"
fern = "0.7"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }

[package.metadata.docs.rs]
features = ["serde", "defmt"]
rustdoc-args = ["--generate-link-to-definition"]
